# docflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  document_inference_platform_done_checklist.md  system_design.txt  system_design_diagram.md
.github/workflows/: foundation-ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/foundation/: api-auth.md  external-ingestion-api.md  extraction-contract.md  hybrid-extraction-pipeline.md  local-development.md  observability.md  operator-dashboard.md  results-contract.md  status-polling-contract.md  storage-contract.md  webhook-contract.md
docs/postman/: doc_ocr_platform.postman_collection.json
nginx/: nginx.conf
scripts/: bootstrap_ec2_dev.sh
services/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_foundation_schema.py  0002_ingestion_contract.py  0003_extraction_contract.py  0004_classification_results.py  0005_webhook_delivery_contract.py  0006_reliability_and_dead_letter.py  0007_user_dashboard.py
services/api/src/api_service/: auth.py  config.py  dashboard_render.py  dependencies.py  errors.py  main.py  observability.py  schemas.py  storage.py  templates_utils.py
services/api/src/api_service/db/: base.py  models.py  session.py
services/api/src/api_service/repositories/: clients.py  jobs.py  operator_dashboard.py  sessions.py  users.py  webhooks.py
services/api/src/api_service/routers/: __init__.py  landing.py
services/api/src/api_service/routers/dashboard/: __init__.py  api_keys.py  auth.py  home.py  jobs.py  webhooks.py
services/api/src/api_service/services/: dashboard_auth.py  dashboard_user.py  ingestion.py  operator_dashboard.py  pipeline.py  results.py  status.py  sync_pipeline.py  webhooks.py
services/api/src/api_service/templates/: landing.html  operator_dashboard.html
services/api/src/api_service/templates/dashboard/: _base.html  api_keys.html  home.html  job_detail.html  jobs.html  login.html  signup.html  webhooks.html
services/api/tests/: test_auth_api_keys.py  test_extraction_contract.py  test_foundation_schema.py  test_health.py  test_ingestion_schema.py  test_observability.py  test_operator_dashboard.py  test_results_api.py  test_results_contract.py  test_status_api.py  test_storage_keys.py  test_upload_api.py  test_webhook_contract.py  test_webhook_dispatch_api.py
services/classifier/: Dockerfile  pyproject.toml
services/classifier/src/classifier_service/: __init__.py  config.py  inference.py  main.py  observability.py
services/classifier/tests/: test_bootstrap_config.py  test_health.py  test_inference_service.py
services/extractor/: Dockerfile  pyproject.toml
services/extractor/src/extractor_service/: config.py  extraction.py  main.py  observability.py
services/extractor/tests/: test_extraction_service.py  test_health.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator_service/: celery_app.py  classifier_client.py  config.py  extractor_client.py  observability.py  pipeline_client.py  tasks.py  webhook_client.py
services/orchestrator/tests/: test_celery_app.py  test_classification_tasks.py  test_extraction_tasks.py  test_observability.py  test_webhook_tasks.py
(+81 files in other folders)
