[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "doc-platform-api"
version = "0.1.0"
description = "API service for the document OCR platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.32,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]
