[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "doc-platform-classifier"
version = "0.1.0"
description = "Classifier service for the document OCR platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/classifier_service"]
