[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "doc-platform-extractor"
version = "0.1.0"
description = "Extractor service for the document OCR platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.32,<1.0",
  "paddleocr>=2.7,<3.0",
  "paddlepaddle>=2.6,<3.0",
  "Pillow>=10.0",
  "numpy>=1.26",
  "pdf2image>=1.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extractor_service"]
